--- a/index.html
+++ b/index.html
@@ -1,24 +1,46 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="./css/style.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-</head>
-<body>
-    <header>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Document</title>
+        <link rel="stylesheet" href="./css/style.css">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link
+            href="https://fonts.googleapis.com/css2?family=PT+Sans:wght@400;700&display=swap"
+            rel="stylesheet">
+        <link rel="stylesheet"
+            href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
+            integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw=="
+            crossorigin="anonymous" referrerpolicy="no-referrer" />
+    </head>
+    <body>
+        <header>
 
-    </header>
-    
-    <main>
+            <div class="nav flex">
+                <div class="logo"><img src="./img/logo.png" alt="logo"></div>
+                <div class="nav_sm d-lg-none">
+                    <a href="#"><i class="fa-solid fa-bars fa-xl white"></i></a>
+                </div>
+                <div class="nav_lg d-none d-lg-block">
+                    <a href="#">Planning</a>
+                    <a href="#">Testimonials</a>
+                    <a href="#">Features</a>
+                    <a href="#">About Us</a>
+                    <a class="btn_white" href="#">Get Started</a>
+                </div>
+            </div>
 
-    </main>
+        </header>
 
-    <footer>
+        <main>
 
-    </footer>
+        </main>
 
-</body>
+        <footer>
+
+        </footer>
+
+    </body>
 </html>
