--- a/index.html
+++ b/index.html
@@ -35,7 +35,60 @@
         </header>
 
         <main>
+            <div class="container"><!--1 section-->
+                <div class="col-12"><!--1 col-->
+                    <h2 class="ta-left">Get a demo application</h2>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                        Laborum omnis nulla, odio atque sunt possimus aspernatur
+                        nisi amet dolore, error porro cumque, cupiditate maxime?
+                        Dolorem facilis doloribus incidunt error cum.</p>
+                    <div class="app_store ta-center">
+                        <a href="#"><i class="fa-brands fa-apple"></i> App store</a>
+                    </div>
+                    <img width="100%" src="./img/phone.png" alt>
+                </div>
+                <div class="col-12 ta-center"><!--2 col-->
+                    <div class="icon ">
+                        <i class="fa-solid fa-file-code"></i>
+                    </div>
+                    <h2>Clean Code</h2>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                        Cum consectetur iste incidunt modi beatae ad vitae
+                        deserunt dicta. Cupiditate, veritatis fugit molestias
+                        facilis maiores ea quas laboriosam ipsa nemo illum!</p>
+                </div>
+                <div class="col-12 ta-center"><!--3 col-->
+                    <div class="icon ">
+                        <i class="fa-solid fa-compass-drafting"></i>
+                    </div>
+                    <h2>Web Design</h2>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                        Cum consectetur iste incidunt modi beatae ad vitae
+                        deserunt dicta. Cupiditate, veritatis fugit molestias
+                        facilis maiores ea quas laboriosam ipsa nemo illum!</p>
+                </div>
+                <div class="col-12 ta-center"><!--4 col-->
+                    <div class="icon ">
+                        <i class="fa-solid fa-laptop-code"></i>
+                    </div>
+                    <h2>Development</h2>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                        Cum consectetur iste incidunt modi beatae ad vitae
+                        deserunt dicta. Cupiditate, veritatis fugit molestias
+                        facilis maiores ea quas laboriosam ipsa nemo illum!</p>
+                </div>
+                <div class="col-12 ta-center"><!--5 col-->
+                    <div class="icon ">
+                        <i class="fa-solid fa-bullhorn"></i>
+                    </div>
+                    <h2>Branding</h2>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                        Cum consectetur iste incidunt modi beatae ad vitae
+                        deserunt dicta. Cupiditate, veritatis fugit molestias
+                        facilis maiores ea quas laboriosam ipsa nemo illum!</p>
+                </div>
 
+            </div>
         </main>
 
         <footer>
