working on responsive blue
trying to make blue section responsive on all display types

--- a/index.html
+++ b/index.html
@@ -35,19 +35,26 @@
         </header>
 
         <main>
-            <div class="container"><!--1 section-->
-                <div class="col-12"><!--1 col-->
-                    <h2 class="ta-left">Get a demo application</h2>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                        Laborum omnis nulla, odio atque sunt possimus aspernatur
-                        nisi amet dolore, error porro cumque, cupiditate maxime?
-                        Dolorem facilis doloribus incidunt error cum.</p>
-                    <div class="app_store ta-center">
-                        <a href="#"><i class="fa-brands fa-apple"></i> App store</a>
+            <div class="container blue"><!--1 section-->
+                <div class="col-12 col-md-8"><!--1 col-->
+                    <div>
+                        <h2 class="ta-left">Get a demo application</h2>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing
+                            elit.
+                            Laborum omnis nulla, odio atque sunt possimus
+                            aspernatur
+                            nisi amet dolore, error porro cumque, cupiditate
+                            maxime?
+                            Dolorem facilis doloribus incidunt error cum.</p>
+                        <div class="app_store ta-center">
+                            <a href="#"><i class="fa-brands fa-apple"></i> App
+                                store</a>
+                        </div>
                     </div>
-                    <img width="100%" src="./img/phone.png" alt>
+                    <img class="phone" width="100%" src="./img/phone.png" alt>
                 </div>
-                <div class="col-12 ta-center"><!--2 col-->
+
+                <div class="col-12 col-md-4 ta-center"><!--2 col-->
                     <div class="icon ">
                         <i class="fa-solid fa-file-code"></i>
                     </div>
@@ -57,7 +64,8 @@
                         deserunt dicta. Cupiditate, veritatis fugit molestias
                         facilis maiores ea quas laboriosam ipsa nemo illum!</p>
                 </div>
-                <div class="col-12 ta-center"><!--3 col-->
+
+                <div class="col-12 col-md-4 ta-center"><!--3 col-->
                     <div class="icon ">
                         <i class="fa-solid fa-compass-drafting"></i>
                     </div>
@@ -67,7 +75,8 @@
                         deserunt dicta. Cupiditate, veritatis fugit molestias
                         facilis maiores ea quas laboriosam ipsa nemo illum!</p>
                 </div>
-                <div class="col-12 ta-center"><!--4 col-->
+
+                <div class="col-12 col-md-4 ta-center"><!--4 col-->
                     <div class="icon ">
                         <i class="fa-solid fa-laptop-code"></i>
                     </div>
@@ -77,7 +86,8 @@
                         deserunt dicta. Cupiditate, veritatis fugit molestias
                         facilis maiores ea quas laboriosam ipsa nemo illum!</p>
                 </div>
-                <div class="col-12 ta-center"><!--5 col-->
+
+                <div class="col-12 col-md-4 ta-center"><!--5 col-->
                     <div class="icon ">
                         <i class="fa-solid fa-bullhorn"></i>
                     </div>
