--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
 
             <div class="purple">
                 <div class="container">
-                    <div class="col-12">
+                    <div class="col-12 planning1 col-lg-6">
                         <img width="100%" src="./img/planning1.png"
                             alt="planning1">
                         <h2>Strategic Planning</h2>
@@ -118,7 +118,7 @@
                             Debitis, tempora fuga! Deleniti cupiditate tempora
                             blanditiis quod.</p>
                     </div>
-                    <div class="col-12  planning2 ta-center">
+                    <div class="col-12 col-lg-6  planning2 ta-center">
                         <img width="100%" src="./img/planning2.png"
                             alt="planning2">
                         <h2>App Development</h2>
