--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
 
             </div>
 
-            <div class="purple">
+            <div class="purple"><!--2 section-->
                 <div class="container">
                     <div class="col-12 planning1 col-lg-6">
                         <img width="100%" src="./img/planning1.png"
@@ -125,10 +125,63 @@
                         <em>Develop an on-demand app for your delivery buisness
                             to reach your target customers without any
                             interruption</em>
-                            <a class="btn_arrow ta-center" href="#"><i class="fa-solid fa-arrow-down "></i></a>
+                        <a class="btn_arrow ta-center" href="#"><i
+                                class="fa-solid fa-arrow-down "></i></a>
                     </div>
                 </div>
             </div>
+            <div class="testimonials ta-center container"><!--3 section-->
+                <div>
+                    <h2>TESTIMONIALS</h2>
+                    <h1>We are committed expert partners</h1>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                        Maxime tempora ex saepe nihil praesentium porro quis
+                        accusantium, commodi similique </p>
+                </div>
+                <div class="col-12"><!--1 card-->
+                    <img class="testimonial" src="./img/testimonial1.jpg"
+                        alt="testimonial1">
+                    <div class="testimonials_text">
+                        <p><i class="fa-solid fa-quote-left"></i> Lorem ipsum
+                            dolor
+                            sit amet consectetur, adipisicing elit.
+                            Reprehenderit
+                            laborum magnam ipsum, quidem eligendi facere fuga
+                            provident autem at a. <i
+                                class="fa-solid fa-quote-right"></i></p>
+                        <h2>NAT REYNOLDS</h2>
+                    </div>
+                </div>
+                <div class="col-12"><!--2 card-->
+                    <img class="testimonial" src="./img/testimonial2_480.jpg"
+                        alt="testimonial2">
+                    <div class="testimonials_text">
+                        <p><i class="fa-solid fa-quote-left"></i> Lorem ipsum
+                            dolor
+                            sit amet consectetur, adipisicing elit.
+                            Reprehenderit
+                            laborum magnam ipsum, quidem eligendi facere fuga
+                            provident autem at a. <i
+                                class="fa-solid fa-quote-right"></i></p>
+                        <h2>CELIA ALMEDA</h2>
+                    </div>
+                </div>
+                <div class="col-12"><!--3 card-->
+                    <img class="testimonial" src="./img/testimonial3_480.jpg"
+                        alt="testimonial3">
+                    <div class="testimonials_text">
+                        <p><i class="fa-solid fa-quote-left"></i> Lorem ipsum
+                            dolor
+                            sit amet consectetur, adipisicing elit.
+                            Reprehenderit
+                            laborum magnam ipsum, quidem eligendi facere fuga
+                            provident autem at a. <i
+                                class="fa-solid fa-quote-right"></i></p>
+                        <h2>BOB ROBERTS</h2>
+                    </div>
+                </div>
+            </div>
+
         </main>
 
         <footer>
