completed benefits section
added 6 white cards and made them responsive

--- a/index.html
+++ b/index.html
@@ -182,6 +182,88 @@
                 </div>
             </div>
 
+            <div class="benefits"><!--4 section-->
+                <div class="container">
+                    <div class="benefits_text ta-center">
+                        <h2>Benefits of working with us</h2>
+                    </div>
+                    <div class="benefits_cards">
+                        <div class="col-12 col-md-6 col-lg-4"><!--1 card-->
+                            <h1>01</h1>
+                            <h2>High Quality</h2>
+                            <p>Lorem ipsum, dolor sit amet consectetur
+                                adipisicing elit. Nulla, dolore. Sapiente ab
+                                dolorem, odio distinctio consectetur fugiat odit
+                                exercitationem quos?
+                            </p>
+                            <div class="more">
+                                <a class="btn_more" href="#">more</a>
+                            </div>
+                        </div>
+                        <div class="col-12 col-md-6 col-lg-4"><!--2 card-->
+                            <h1>02</h1>
+                            <h2>Creative Team</h2>
+                            <p>Lorem ipsum, dolor sit amet consectetur
+                                adipisicing elit. Nulla, dolore. Sapiente ab
+                                dolorem, odio distinctio consectetur fugiat odit
+                                exercitationem quos?
+                            </p>
+                            <div class="more">
+                                <a class="btn_more" href="#">more</a>
+                            </div>
+                        </div>
+                        <div class="col-12 col-md-6 col-lg-4"><!--3 card-->
+                            <h1>03</h1>
+                            <h2>Amazing Results</h2>
+                            <p>Lorem ipsum, dolor sit amet consectetur
+                                adipisicing elit. Nulla, dolore. Sapiente ab
+                                dolorem, odio distinctio consectetur fugiat odit
+                                exercitationem quos?
+                            </p>
+                            <div class="more">
+                                <a class="btn_more" href="#">more</a>
+                            </div>
+                        </div>
+                        <div class="col-12 col-md-6 col-lg-4"><!--4 card-->
+                            <h1>04</h1>
+                            <h2>Best Pricing</h2>
+                            <p>Lorem ipsum, dolor sit amet consectetur
+                                adipisicing elit. Nulla, dolore. Sapiente ab
+                                dolorem, odio distinctio consectetur fugiat odit
+                                exercitationem quos?
+                            </p>
+                            <div class="more">
+                                <a class="btn_more" href="#">more</a>
+                            </div>
+                        </div>
+                        <div class="col-12 col-md-6 col-lg-4"><!--5 card-->
+                            <h1>05</h1>
+                            <h2>Innovations</h2>
+                            <p>Lorem ipsum, dolor sit amet consectetur
+                                adipisicing elit. Nulla, dolore. Sapiente ab
+                                dolorem, odio distinctio consectetur fugiat odit
+                                exercitationem quos?
+                            </p>
+                            <div class="more">
+                                <a class="btn_more" href="#">more</a>
+                            </div>
+                        </div>
+                        <div class="col-12 col-md-6 col-lg-4"><!--6 card-->
+                            <h1>06</h1>
+                            <h2>24/7 Support</h2>
+                            <p>Lorem ipsum, dolor sit amet consectetur
+                                adipisicing elit. Nulla, dolore. Sapiente ab
+                                dolorem, odio distinctio consectetur fugiat odit
+                                exercitationem quos?
+                            </p>
+                            <div class="more">
+                                <a class="btn_more" href="#">more</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
         </main>
 
         <footer>
