--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Document</title>
+        <title>Responsive</title>
         <link rel="stylesheet" href="./css/style.css">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -261,6 +261,29 @@
                             </div>
                         </div>
                     </div>
+                </div>
+            </div>
+
+            <div class="about container">
+                <div class="about_text">
+                    <h2>About us</h2>
+                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+                        Sint eos exercitationem, ab voluptatem distinctio odit
+                        nemo voluptates enim consectetur, maiores praesentium
+                        iusto velit reiciendis consequatur blanditiis fuga
+                        reprehenderit vitae repellat!Lorem ipsum dolor sit amet
+                        consectetur, adipisicing elit.
+                        Sint eos exercitationem, ab voluptatem distinctio odit
+                        nemo voluptates enim consectetur!</p>
+                        <br>
+                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+                        Sint eos exercitationem, ab voluptatem distinctio odit
+                        nemo voluptates enim consectetur, maiores praesentium
+                        iusto velit reiciendis consequatur blanditiis fuga
+                        reprehenderit vitae repellat!Lorem ipsum dolor sit amet
+                        consectetur, adipisicing elit.
+                        Sint eos exercitationem, ab voluptatem distinctio odit
+                        nemo voluptates enim consectetur!</p>
                 </div>
             </div>
 
