--- a/index.html
+++ b/index.html
@@ -264,28 +264,43 @@
                 </div>
             </div>
 
-            <div class="about container">
+            <div class="about container"><!--5 section-->
                 <div class="about_text">
-                    <h2>About us</h2>
+                    <h1>About us</h1>
                     <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit.
                         Sint eos exercitationem, ab voluptatem distinctio odit
                         nemo voluptates enim consectetur, maiores praesentium
                         iusto velit reiciendis consequatur blanditiis fuga
-                        reprehenderit vitae repellat!Lorem ipsum dolor sit amet
-                        consectetur, adipisicing elit.
-                        Sint eos exercitationem, ab voluptatem distinctio odit
-                        nemo voluptates enim consectetur!</p>
-                        <br>
+                        reprehenderit vitae repellat! Lorem ipsum dolor sit amet
+                        consectetur, adipisicing elit. Lorem ipsum dolor sit
+                        amet, consectetur adipisicing elit. Eligendi repellendus
+                        odio et minus ipsa corrupti, suscipit ratione totam iste
+                        porro!</p>
+                    <br>
                     <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit.
                         Sint eos exercitationem, ab voluptatem distinctio odit
                         nemo voluptates enim consectetur, maiores praesentium
                         iusto velit reiciendis consequatur blanditiis fuga
-                        reprehenderit vitae repellat!Lorem ipsum dolor sit amet
-                        consectetur, adipisicing elit.
-                        Sint eos exercitationem, ab voluptatem distinctio odit
-                        nemo voluptates enim consectetur!</p>
+                        reprehenderit vitae repellat! Lorem ipsum dolor sit amet
+                        consectetur, adipisicing elit. Lorem ipsum dolor sit
+                        amet consectetur adipisicing elit. Corrupti tenetur
+                        soluta libero adipisci illum iure, nulla ut quia sint
+                        dolorum.</p>
+                </div>
+                <div class="about_img">
+
+                    <img class="testimonial "
+                        src="./img/about.jpg"
+                        alt="man in suit">
+
+                    <h2>I help companies tincidunt tortor aliquam nulla facilisi
+                        cras fermentum odio</h2>
+                    <i class="fa-solid fa-quote-left"></i>
+                    <a class="linkedin_btn" href="#"><i class="fa-brands fa-linkedin"></i> Find me on linkedin</a>
                 </div>
             </div>
+
+            <div class="get_started"></div>
 
         </main>
 
