--- a/index.html
+++ b/index.html
@@ -296,15 +296,33 @@
                     <h2>I help companies tincidunt tortor aliquam nulla facilisi
                         cras fermentum odio</h2>
                     <i class="fa-solid fa-quote-left"></i>
-                    <a class="linkedin_btn" href="#"><i class="fa-brands fa-linkedin"></i> Find me on linkedin</a>
+                    <a class="linkedin_btn" href="#"><i
+                            class="fa-brands fa-linkedin"></i> Find me on
+                        linkedin</a>
                 </div>
             </div>
 
-            <div class="get_started"></div>
+            <div class="get_started">
+                <div class="container ta-center">
+                    <h3>GET STARTED</h3>
+                    <h2>Simple, Transparent Pricing</h2>
+                    <h1>It's Free!</h1>
+                    <p>We're still in beta and we will be for awhile. As we add
+                        more functionality, we'll look into other plans with
+                        more control</p>
+                    <div class="get_started_btn">
+                        <a href="#">Get Started</a>
+                    </div>
+                    <p class="copyright">Copyright 2021 Boolean &#8226 Classe XX 	&#8226 <a href="#"> Privacy policy</a></p>
+                </div>
+            </div>
 
         </main>
 
         <footer>
+            <div class="container">
+                
+            </div>
 
         </footer>
 
