--- a/index.html
+++ b/index.html
@@ -302,7 +302,7 @@
                 </div>
             </div>
 
-            <div class="get_started">
+            <div class="get_started"><!--6 section-->
                 <div class="container ta-center">
                     <h3>GET STARTED</h3>
                     <h2>Simple, Transparent Pricing</h2>
@@ -313,15 +313,18 @@
                     <div class="get_started_btn">
                         <a href="#">Get Started</a>
                     </div>
-                    <p class="copyright">Copyright 2021 Boolean &#8226 Classe XX 	&#8226 <a href="#"> Privacy policy</a></p>
+                    <p class="copyright">Copyright 2021 Boolean &#8226 Classe XX
+                        &#8226 <a href="#"> Privacy policy</a></p>
                 </div>
             </div>
 
         </main>
 
         <footer>
-            <div class="container">
-                
+            <div class="container ta-center">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                    Doloremque minima quas optio earum illum, illo cupiditate.</p>
+                <p class="careers"><a href="#">Lorem ipsum</a> dolor, sit amet <a href="#">Boolean careers</a> </p>
             </div>
 
         </footer>
