--- a/index.html
+++ b/index.html
@@ -104,9 +104,11 @@
 
             <div class="purple"><!--2 section-->
                 <div class="container">
-                    <div class="col-12 planning1 col-lg-6">
-                        <img width="100%" src="./img/planning1.png"
+                    <div class="col-12 planning1  col-lg-6">
+                        <img class="visible" width="100%" src="./img/planning1.png "
                             alt="planning1">
+                            <img class="invisible" width="100%" src="./img/planning1_wink.png "
+                            alt="planning1">      
                         <h2>Strategic Planning</h2>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing
                             elit.
@@ -119,7 +121,9 @@
                             blanditiis quod.</p>
                     </div>
                     <div class="col-12 col-lg-6  planning2 ta-center">
-                        <img width="100%" src="./img/planning2.png"
+                        <img class="visible2" width="100%" src="./img/planning2.png"
+                            alt="planning2">
+                            <img class="invisible2" width="100%" src="./img/planning2_wink.png"
                             alt="planning2">
                         <h2>App Development</h2>
                         <em>Develop an on-demand app for your delivery buisness
